[tool.poetry]
name = "dagster_prefect_project"
version = "0.1.0"
description = ""
authors = ["Ilya <eresinalara@gmail.com>"]
readme = "README.md"
packages = [
  { include = "cli" },
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
dagster = "^1.1.18"
prefect = "^2.8.0"
pandas = "^1.5.3"
urllib3 = "^1.26.14"

[tool.poetry.scripts]
task = 'cli.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
